# Carbonscope

./: .commitmsg  .env.example  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  update_styles.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
alembic/versions/: a8f3e1b9c4d2_phase1_auth_hardening.py  j7k8l9m0n1o2_phase43_performance_indexes.py
api/: __init__.py  auth.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
api/routes/: __init__.py  ai_routes.py  alert_routes.py  audit_routes.py  auth_routes.py  billing_routes.py  carbon_routes.py  company_routes.py  compliance_routes.py  events_routes.py  marketplace_routes.py  mfa_routes.py  pcaf_routes.py  questionnaire_routes.py  review_routes.py  scenario_routes.py  stripe_routes.py  supply_chain_routes.py  team_routes.py  webhook_routes.py
api/services/: __init__.py  audit.py  carbon.py  compliance.py  data_export.py  email.py  event_bus.py  llm_parser.py  marketplace.py  pdf_export.py  prediction.py  questionnaire.py  recommendations.py  scenarios.py  subnet_bridge.py  subscriptions.py  supply_chain.py  templates.py  webhooks.py
carbonscope/: protocol.py  scoring.py  utils.py
carbonscope/emission_factors/: __init__.py  loader.py  scope1.py  scope2.py  scope3.py
carbonscope/test_cases/: generator.py
carbonscope/validation/: benchmark.py  ghg_protocol.py  sanity_checks.py
data/emission_factors/: defra_factors.json  egrid_subregions.json  epa_mobile_combustion.json  epa_stationary_combustion.json  gwp_ar6.json  iea_grid_factors.json  industry_averages.json  transport_factors.json
docs/: API.md  ARCHITECTURE.md  BACKUP_RESTORE_RUNBOOK.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  MAINNET_MIGRATION.md  SECURITY.md
docs/archive/: DEPLOYMENT.md.bak  README.md.bak  README.md.old
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/e2e/: happy-path.spec.ts  navigation.spec.ts  smoke.spec.ts  user-journey.spec.ts
k8s/: README.md  backend.yaml  cronjob-backup.yaml  hpa.yaml  monitoring.yaml  network-policy.yaml  secrets.yaml
neurons/: miner.py  validator.py
nginx/: nginx.conf
scripts/: load_test_subnet.py  register.sh  run_miner.sh  run_validator.sh  train_prediction_model.py  validate_env.py
tests/: __init__.py  conftest.py  test_ai_services.py  test_auth_api.py  test_billing_alerts_marketplace.py  test_carbon_api.py  test_company_api.py  test_compliance.py  test_concurrency.py  test_emission_factors.py  test_events_routes.py  test_generator.py  test_new_features.py  test_new_routes.py  test_phase1_security.py  test_phase21_coverage.py  test_phase25_hardening.py  test_phase3_features.py  test_phase5_security.py  test_questionnaire_routes.py  test_scoring.py  test_startup_policy.py  test_subnet_integration.py  test_utils.py  test_v060_features.py  test_validator.py  test_webhook_upload_softdelete.py
(+128 files in other folders)
