[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbonscope"
version = "0.27.0"
description = "Bittensor subnet for decentralized corporate carbon emission estimation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "bittensor==10.1.0",
    "pydantic[email]>=2.12",
    "numpy>=2.4",
    "fastapi>=0.135",
    "uvicorn>=0.41",
    "sqlalchemy[asyncio]>=2.0.48",
    "aiosqlite>=0.22",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.2,<4.0",
    "PyJWT>=2.11",
    "httpx>=0.28",
    "slowapi>=0.1.9",
    "redis>=5.2",
    "python-multipart>=0.0.22",
    "aiosmtplib>=3.0.0",
    "pdfplumber>=0.11",
    "python-docx>=1.2",
    "openpyxl>=3.1.5",
    "reportlab>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:asyncio",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["api", "carbonscope"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
